@@ -1,3 +1,8 @@
+2004-05-02  Anders Carlsson  <andersca@gnome.org>
+
+	* libgnome/gnome-sound.c: Fix crash when reading invalid
+	audio files. (#124519, Chris Lahey)
+
 =================== 2.6.1.1 ===================
 
 2004-04-20  Anders Carlsson  <andersca@gnome.org>
